--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "display_name": "Prompt Manager (Global Presets)",
+    "display_name": "prompt_manager_final",
     "loading_order": 10,
     "requires": [],
     "optional": [],
